--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ src="https://www.facebook.com/tr?id=678178621965512&ev=PageView&noscript=1"
 
   <!-- Call to Action -->
   <div class="text-center mt-8  ">
-    <a href="https://t.me/+ticZDMFMVB4yNDA1">
+    <a href="https://t.me/+10U5c5Mf90s5OThl">
       <button class="animated-button border-4 border-white "  style="box-shadow: 0px 0px 0px 5px rgb(255, 0, 0); background-color: rgb(255, 0, 0);">JOIN 𝗘𝗞𝗞𝗔 𝗕𝗛𝗔𝗜 𝗢𝗥𝗜𝗚𝗜𝗡𝗔𝗟 CHANNEL</button>
     </a>
     <p class="mt-4 text-sm font-medium uppercase">BBL 44/43 Pass | IPL 74/73 Pass | T20 World Cup 55/53 Pass</p>
@@ -182,4 +182,5 @@ src="https://www.facebook.com/tr?id=678178621965512&ev=PageView&noscript=1"
 </body>
 
 </html>
+
 
